WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180486
[EME] Possible deadlock when aborting a SourceBufferPrivateAVFObjC append operation
https://bugs.webkit.org/show_bug.cgi?id=180486
Summary
[EME] Possible deadlock when aborting a SourceBufferPrivateAVFObjC append ope...
Jer Noble
Reported
2017-12-06 10:53:29 PST
[EME] Possible deadlock when aborting a SourceBufferPrivateAVFObjC append operation
Attachments
Patch
(5.94 KB, patch)
2017-12-06 11:00 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews105 for mac-elcapitan-wk2
(2.84 MB, application/zip)
2017-12-06 12:16 PST
,
EWS Watchlist
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2017-12-06 11:00:02 PST
Created
attachment 328592
[details]
Patch
EWS Watchlist
Comment 2
2017-12-06 12:16:27 PST
Comment on
attachment 328592
[details]
Patch
Attachment 328592
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/5518010
New failing tests: webrtc/video-replace-muted-track.html
EWS Watchlist
Comment 3
2017-12-06 12:16:28 PST
Created
attachment 328605
[details]
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Jer Noble
Comment 4
2017-12-06 16:15:24 PST
(In reply to Build Bot from
comment #3
)
> Created
attachment 328605
[details]
> Archive of layout-test-results from ews105 for mac-elcapitan-wk2 > > The attached test failures were seen while running run-webkit-tests on the > mac-wk2-ews. > Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
This test is a flakey failure locally even without my patch.
Eric Carlson
Comment 5
2017-12-06 16:25:00 PST
Comment on
attachment 328592
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=328592&action=review
> Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:222 > + if (!dispatch_semaphore_wait(_abortSemaphore.get(), dispatch_time(DISPATCH_TIME_NOW, NSEC_PER_MSEC * 100))) { > + dispatch_semaphore_signal(_abortSemaphore.get());
Nit: why abortSemaphore rather than _abortSemaphore?
> Source/WebCore/platform/graphics/avfoundation/objc/SourceBufferPrivateAVFObjC.mm:243 > + if (!dispatch_semaphore_wait(_abortSemaphore.get(), dispatch_time(DISPATCH_TIME_NOW, NSEC_PER_MSEC * 100))) { > + dispatch_semaphore_signal(_abortSemaphore.get());
Ditto.
WebKit Commit Bot
Comment 6
2017-12-07 11:25:40 PST
Comment on
attachment 328592
[details]
Patch Clearing flags on attachment: 328592 Committed
r225635
: <
https://trac.webkit.org/changeset/225635
>
WebKit Commit Bot
Comment 7
2017-12-07 11:25:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2017-12-07 11:26:21 PST
<
rdar://problem/35914294
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug